# django-store

./: .gitignore  README.md  package-lock.json  package.json  postcss.config.js  pyproject.toml  tailwind.config.js
src/: requirements.txt
src/core/: settings.py  urls.py
src/products/: urls.py
src/products/templates/products/: index.html
src/static/css/: index.css  style.css
src/static/css/assets/: index.css
src/templates/: index.html
src/templates/layout/: base.html
src/templates/layout/nav/: nav.html
src/templates/pages/: home.html
