[tool.poetry]
name = "django-store"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_store"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
psycopg = "^3.1.9"
psycopg-binary = "^3.1.9"
django-environ = "^0.10.0"
django-extensions = "^3.2.3"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
django-browser-reload = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
